# bitrig

./: .gitignore  CURRENT  Makefile  Makefile.cross  README  UPDATING
contrib/: Makefile
contrib/Python-2.7.2/: .hg_archival.txt  Makefile.bsd-wrapper  configure
contrib/groff-1.21/: ChangeLog  ChangeLog.115  ChangeLog.116  ChangeLog.117  ChangeLog.118  INSTALL  MANIFEST  MORE.STUFF  Makefile  Makefile.bsd-wrapper  Makefile.ccpg  Makefile.comm  Makefile.cpg  Makefile.dev  Makefile.in  Makefile.lib  Makefile.man  Makefile.sub  NEWS  PROBLEMS  README.MinGW  aclocal.m4  configure  configure.ac  gendef.sh  test-groff.in
contrib/groff-1.21/arch/djgpp/: README  config.bat  config.sed  config.site  t-groff.bat
contrib/groff-1.21/arch/misc/: Makefile.sub  shdeps.sh
contrib/groff-1.21/contrib/chem/: ChangeLog  Makefile.sub  chem.pl
contrib/groff-1.21/contrib/eqn2graph/: Makefile.sub  eqn2graph.sh
contrib/groff-1.21/contrib/gdiffmk/: ChangeLog  Makefile.sub  README  gdiffmk.man  gdiffmk.sh
contrib/groff-1.21/contrib/gdiffmk/tests/: baseline.7  runtests.in
contrib/groff-1.21/contrib/grap2graph/: Makefile.sub  grap2graph.sh
contrib/groff-1.21/contrib/groffer/: ChangeLog  Makefile.sub  README  roff2.man
contrib/groff-1.21/contrib/groffer/perl/: README_PERL  func.pl  groffer.man  groffer.pl  man.pl  perl_test.pl  roff2.pl
contrib/groff-1.21/contrib/groffer/shell/: ChangeLog.0  README_SH  groffer.man  groffer.sh  groffer2.sh  roff2.sh
contrib/groff-1.21/contrib/hdtbl/: ChangeLog  Makefile.sub  groff_hdtbl.man  hdmisc.tmac  hdtbl.tmac
contrib/groff-1.21/contrib/hdtbl/examples/: common.roff  fonts_n.in  fonts_x.in
contrib/groff-1.21/contrib/mm/: ChangeLog  Makefile.sim  Makefile.sub  NOTES  README  groff_mm.man
contrib/groff-1.21/contrib/mm/examples/: APP  B1B2  COVER  IND  LT  LT.se  ML  MOVE  MUL  NCOL  ND  README  References  SETR
contrib/groff-1.21/contrib/mom/: BUGS  ChangeLog  Makefile.sub  NEWS  TODO  copyright  groff_mom.man  om.tmac
contrib/groff-1.21/contrib/mom/examples/: mom.vim
contrib/groff-1.21/contrib/pdfmark/: ChangeLog  Makefile.sub  PROBLEMS  README  TODO  pdfroff.man  pdfroff.sh
contrib/groff-1.21/contrib/pic2graph/: Makefile.sub  pic2graph.sh
contrib/groff-1.21/doc/: Makefile.in  Makefile.sub  groff.info  groff.info-1  groff.info-2  groff.info-3  groff.texinfo  txi-en.tex
contrib/groff-1.21/font/devascii/: Makefile.sub
contrib/groff-1.21/font/devcp1047/: Makefile.sub
contrib/groff-1.21/font/devdvi/: Makefile.sub
contrib/groff-1.21/font/devhtml/: Makefile.sub
contrib/groff-1.21/font/devlatin1/: Makefile.sub
contrib/groff-1.21/font/devlbp/: Makefile.sub
contrib/groff-1.21/font/devlj4/: Makefile.sub
contrib/groff-1.21/font/devps/: Makefile.sub  symbolmap
contrib/groff-1.21/font/devutf8/: Makefile.sub
contrib/groff-1.21/man/: groff.man  groff_char.man  groff_diff.man
contrib/groff-1.21/src/devices/grohtml/: grohtml.man  post-html.cpp
contrib/groff-1.21/src/devices/grolbp/: grolbp.man
contrib/groff-1.21/src/devices/grops/: grops.man  ps.cpp
contrib/groff-1.21/src/devices/grotty/: Makefile.sub  grotty.man  tty.cpp
contrib/groff-1.21/src/devices/xditview/: ChangeLog  DviP.h  Makefile.sub  TODO  gxditview.man  xditview.c
contrib/groff-1.21/src/include/: font.h  getopt.h  getopt_int.h  lib.h  ptable.h  relocate.h
contrib/groff-1.21/src/libs/gnulib/: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
contrib/groff-1.21/src/libs/gnulib/lib/: Makefile.am  Makefile.in  stddef.in.h  stdint.in.h  wchar.in.h  wctype.in.h
contrib/groff-1.21/src/libs/gnulib/lib/uniwidth/: width.c
contrib/groff-1.21/src/libs/gnulib/m4/: Makefile.am  Makefile.in  gnulib-cache.m4  gnulib-comp.m4
contrib/groff-1.21/src/libs/libdriver/: input.cpp
contrib/groff-1.21/src/libs/libgroff/: Makefile.sub  fmod.c  font.cpp  getcwd.c  getopt.c  getopt1.c  maxpathname.cpp  mkstemp.cpp  putenv.c  relocate.cpp  searchpath.cpp  strcasecmp.c  strerror.c  string.cpp  strtol.c
contrib/groff-1.21/src/libs/snprintf/: snprintf.c
contrib/groff-1.21/src/preproc/eqn/: Makefile.sub  eqn.cpp  eqn.man  eqn_tab.h
contrib/groff-1.21/src/preproc/pic/: object.cpp  pic.cpp  pic.y  pic_tab.h  troff.cpp
contrib/groff-1.21/src/preproc/refer/: label.cpp  refer.man
contrib/groff-1.21/src/preproc/tbl/: main.cpp  table.cpp  table.h  tbl.man
contrib/groff-1.21/src/roff/groff/: groff.cpp  groff.man
contrib/groff-1.21/src/roff/grog/: Makefile.sub  grog.man  grog.pl
contrib/groff-1.21/src/roff/nroff/: Makefile.sub
contrib/groff-1.21/src/roff/troff/: Makefile.sub  TODO  charinfo.h  env.cpp  input.cpp  mtsm.cpp  node.cpp  node.h  token.h  troff.h  troff.man
contrib/groff-1.21/src/utils/afmtodit/: Makefile.sub  afmtodit.man  afmtodit.pl
contrib/groff-1.21/src/utils/hpftodit/: hpftodit.cpp
contrib/groff-1.21/src/utils/indxbib/: Makefile.sub
contrib/groff-1.21/src/utils/xtotroff/: Makefile.in  xtotroff.c  xtotroff.man
contrib/groff-1.21/tmac/: Makefile.sub  an-old.tmac  doc-common  doc.tmac  groff_man.man  groff_ms.man  hyphenex.pl  troffrc  tty.tmac  www.tmac
contrib/llvm/: .gitignore
contrib/llvm-3.0.src/: Makefile.bsd-wrapper  Makefile.config.in  configure
distrib/: Makefile
etc/: MAKEDEV.common  MAKEDEV.man  MAKEDEV.mi  Makefile  changelist  crontab  fbtab.tail  ftpusers  group  login.conf.in  mailer.conf  man.conf  master.passwd  mk.conf  mklogin.conf  motd  mrouted.conf  newsyslog.conf  ntpd.conf  protocols  rbootd.conf  rc  rc.conf  rc.local  remote  security  services  sysctl.conf  wsconsctl.conf
gnu/: Makefile
include/: Makefile  ctype.h  curses.h  dirent.h  fstab.h  inttypes.h  langinfo.h  locale.h  monetary.h  netgroup.h  regex.h  runetype.h  signal.h  stdatomic.h  stdbool.h  stddef.h  stdio.h  stdlib.h  string.h  time.h  unistd.h  uuid.h  wchar.h  wctype.h
kerberosIV/: Makefile  Makefile.inc
lib/: Makefile  bumpversion
libexec/: Makefile  Makefile.inc
sbin/: Makefile
share/: Makefile  Makefile.inc
sys/: Makefile
usr.bin/: Makefile  Makefile.inc
usr.sbin/: Makefile  Makefile.inc
(+9478 files in other folders)
