## Process this file with automake to produce Makefile.in.

EXTRA_DIST =
EXTRA_DIST += 00gnulib.m4
EXTRA_DIST += codeset.m4
EXTRA_DIST += extensions.m4
EXTRA_DIST += fcntl-o.m4
EXTRA_DIST += glibc21.m4
EXTRA_DIST += gnulib-common.m4
EXTRA_DIST += include_next.m4
EXTRA_DIST += libunistring-base.m4
EXTRA_DIST += localcharset.m4
EXTRA_DIST += longlong.m4
EXTRA_DIST += multiarch.m4
EXTRA_DIST += stddef_h.m4
EXTRA_DIST += stdint.m4
EXTRA_DIST += warn-on-use.m4
EXTRA_DIST += wchar_h.m4
EXTRA_DIST += wchar_t.m4
EXTRA_DIST += wctype_h.m4
EXTRA_DIST += wcwidth.m4
EXTRA_DIST += wint_t.m4
